k3d/monitoring/loki-sc-rules-resources-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: monitoring
spec:
  template:
    spec:
      containers:
        - name: loki-sc-rules
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
