k3d/monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints: [web]
  routes:
    - match: Host(`grafana.localhost`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
